--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-maven-noarg</artifactId>
+			<version>1.3.70</version>
 		</dependency>
 	</dependencies>
 
